plugins {
    id 'java'
}

group = 'by.mrrockka'
version = '1.0-SNAPSHOT'

subprojects {
    java {
        sourceCompatibility = 17
        targetCompatibility = 17
        toolchain {
            languageVersion = JavaLanguageVersion.of(17)
        }
    }

    tasks.withType(JavaCompile) {
        options.compilerArgs = [
                '-Amapstruct.suppressGeneratorTimestamp=true',
                '-Amapstruct.defaultComponentModel=spring',
        ]
    }

    repositories {
        mavenCentral()
        mavenLocal()
    }

}

